syntax = "proto3";

package proto;

option go_package = "github.com/bill-splitting/proto";

message CreateLineGroupRequest {
    string name = 1;
    string line_id = 2;
}

message CreateLineGroupResponse {
    int32 id = 1;
    string name = 2;
    string line_id = 3;
}
